src/objects/Weather__c.object
<CustomObject>
    <fields>
        <fullName>Avg_Humidity__c</fullName>
        <label>Avg Humidity</label>
        <precision>4</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Avg_Wind__c</fullName>
        <label>Avg Wind</label>
        <precision>4</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Calendar_Date__c</fullName>
        <label>Calendar Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Center_Information__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Center Information</label>
        <referenceTo>Center_Information__c</referenceTo>
        <relationshipLabel>Weather</relationshipLabel>
        <relationshipName>Weather</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Conditions__c</fullName>
        <label>Conditions</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Type__c</fullName>
        <label>Data Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Current</fullName>
                </value>
                <value>
                    <fullName>Past</fullName>
                </value>
                <value>
                    <fullName>Forecast</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Icon_URL__c</fullName>
        <label>Icon URL</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Icon__c</fullName>
        <label>Icon</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JSON_Data__c</fullName>
        <label>JSON Data</label>
        <length>1500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Max_Humidity__c</fullName>
        <label>Max Humidity</label>
        <precision>4</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Max_Wind__c</fullName>
        <label>Max Wind</label>
        <precision>4</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Min_Humidity__c</fullName>
        <label>Min Humidity</label>
        <precision>4</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>POP__c</fullName>
        <label>POP</label>
        <precision>4</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QPF_Allday__c</fullName>
        <label>QPF Allday</label>
        <precision>4</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QPF_Day__c</fullName>
        <label>QPF Day</label>
        <precision>4</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QPF_Night__c</fullName>
        <label>QPF Night</label>
        <precision>4</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Skyicon__c</fullName>
        <label>Skyicon</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Snow_AllDay__c</fullName>
        <label>Snow AllDay</label>
        <precision>4</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Snow_Day__c</fullName>
        <label>Snow Day</label>
        <precision>4</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Snow_night__c</fullName>
        <label>Snow Night</label>
        <precision>4</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Temp_High__c</fullName>
        <label>Temp High</label>
        <precision>4</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Temp_Low__c</fullName>
        <label>Temp Low</label>
        <precision>4</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <label>Weather</label>
    <nameField>
        <displayFormat>WN-{0000}</displayFormat>
        <label>Weather Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Weather</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>